# site-demo

./: .gitignore  Dockerfile  MANIFEST.in  README.md  clean  dev  install.py  lint  prod  pyproject.toml  requirements.txt  run_dev.py  run_docker.sh  test
src/feedthewatchdogs/: app.py  background_tasks.py  init_app.py  init_frontend_app.py  memory_cache.py  util.py
src/feedthewatchdogs/testing/: util.py
tests/: test_example.py
www/: package-lock.json  package.json
www/src/: manifest.json
www/src/src/: app.ts  util.js
www/src/src/components/splash/: index.css  index.js
www/webpack/: webpack.common.js
